Manifestos/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  api-server
  namespace: default
  labels:
    app:  api-server
spec:
  selector:
    matchLabels:
      app: api-server
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  api-server
    spec:
      containers:
      - name:  api-server
        image:  coudbenks/tcc_aplication:v0.4
        imagePullPolicy: IfNotPresent
        resources:
          requests: # minimo necessário para a aplicação funcionar
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 5 # A cada 5 segundo ele vai realizar a checagem
          failureThreshold: 1 # Numero de vezes que tem que falhar pra ele reiniciar o POD
          timeoutSeconds: 1 # Tempo que é esperado da resposta do endpoint
          successThreshold: 1
          initialDelaySeconds: 5
        ports:
        - containerPort: 80
          name:  api-server
      restartPolicy: Always
