Manifestos/api_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  labels:
    app: api-server
spec:
  ports:
  - port: 80
    targetPort: 80
    name: api-port
  selector:
    app: api-server
