Manifestos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api-tcc-local-server
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-svc
            port: 
              number: 80
